--- a/Ron/房東/房東_加入新房源/AddHouse03/AddHouse03_map.html
+++ b/Ron/房東/房東_加入新房源/AddHouse03/AddHouse03_map.html
@@ -142,6 +142,14 @@
             }
         }
 
+        .nextsteprow {
+            height: 100px;
+        }
+
+        .OptionsRow3 {
+            height: calc(100vh - 100px);
+        }
+
         /* 詳細地址框左上角的上一步 */
     </style>
 </head>
@@ -202,7 +210,7 @@
 
                     </div>
                 </div>
-                <div class="row">
+                <div class="row nextsteprow">
                     <div class="col-12 nextstep  d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
                         <button class="btn btn-dark ms-auto"><a href="#"
