--- a/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
+++ b/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
@@ -114,6 +114,14 @@
         i {
             font-size: 24px;
         }
+
+        .nextsteprow {
+            height: 100px;
+        }
+
+        .OptionsRow4 {
+            height: calc(100vh - 100px);
+        }
     </style>
 </head>
 
@@ -125,8 +133,8 @@
                 <h3>你打算接待幾位房客?</h3>
             </div>
             <!-- 選項 -->
-            <div class="col-md-6 col-12 Options pt-md-5">
-                <div class="row justify-content-center align-content-center pt-md-5 OptionsRow4 ">
+            <div class="col-md-6 col-12 Options ">
+                <div class="row justify-content-center align-content-center  OptionsRow4 ">
                     <div class="col-12 col-md-8">
                         <div class="form-outline">
                             <span>房客</span>
@@ -169,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row nextsteprow">
                     <div class="col-12 nextstep  d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
                         <button class="btn btn-dark ms-auto"><a href="#"
