--- a/Ron/房東/房東_加入新房源/AddHouse02/AddHouse02.html
+++ b/Ron/房東/房東_加入新房源/AddHouse02/AddHouse02.html
@@ -50,12 +50,12 @@
 
         }
 
-        @media screen and (max-width:767px) {
+        /* @media screen and (max-width:767px) {
             .Options>.OptionsRow2 {
                 height: calc(100% + 300px);
 
             }
-        }
+        } */
 
         /* .Options{
         height: 100vh;
@@ -87,6 +87,14 @@
             height: 100px;
             border-top: 1px solid #aaa;
         }
+
+        .nextsteprow {
+            height: 100px;
+        }
+
+        .OptionsRow2 {
+            height: calc(100vh - 100px);
+        }
     </style>
 </head>
 
@@ -98,23 +106,23 @@
                 <h3>房客會入住哪種空間?</h3>
             </div>
             <!-- 選項 -->
-            <div class="col-md-6 col-12 Options pt-md-5 ">
-                <div class="row justify-content-center  pt-md-5 OptionsRow2 align-content-center">
+            <div class="col-md-6 col-12 Options  ">
+                <div class="row justify-content-center   OptionsRow2 align-content-center">
 
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-md-5 btn bg-white ">
+                    <button class="col-8 OptionCards d-flex justify-content-between  btn bg-white ">
 
                         <span>整套房源</span>
                     </button>
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-md-5 btn bg-white ">
+                    <button class="col-8 OptionCards d-flex justify-content-between  btn bg-white ">
 
                         <span>獨立房間</span>
                     </button>
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-md-5 btn bg-white ">
+                    <button class="col-8 OptionCards d-flex justify-content-between  btn bg-white ">
 
                         <span>合住房間</span>
                     </button>
                 </div>
-                <div class="row">
+                <div class="row nextsteprow">
                     <div class="col-12 nextstep  d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
                         <button class="btn btn-dark ms-auto"><a href="#"
