--- a/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
+++ b/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
@@ -91,6 +91,14 @@
             height: 100px;
             border-top: 1px solid #aaa;
         }
+
+        .nextsteprow {
+            height: 100px;
+        }
+
+        .OptionsRow5 {
+            height: calc(100vh - 100px);
+        }
     </style>
 </head>
 
@@ -130,7 +138,7 @@
                         <span>停車位</span>
                     </button>
                 </div>
-                <div class="row">
+                <div class="row nextsteprow">
                     <div class="col-12 nextstep  d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
                         <button class="btn btn-dark ms-auto"><a href="#"
