--- a/Ron/房東/房東_加入新房源/AddHouse06/AddHouse06.html
+++ b/Ron/房東/房東_加入新房源/AddHouse06/AddHouse06.html
@@ -97,6 +97,14 @@
             border: 2px dashed #dddddd;
 
         }
+
+        .nextsteprow {
+            height: 100px;
+        }
+
+        .OptionsRow6 {
+            height: calc(100vh - 100px);
+        }
     </style>
 </head>
 
@@ -108,9 +116,9 @@
                 <h3>接下來，請為房源新增幾張相片</h3>
             </div>
             <!-- 照片 -->
-            <div class="col-md-6 col-12 Options  ">
-                <div class="row justify-content-center pt-5 OptionsRow6">
-                    <div class="col-10 col-md-6  mt-5 d-flex flex-wrap justify-content-center text-center "
+            <div class="col-md-6 col-12 Options   ">
+                <div class="row justify-content-center OptionsRow6 ">
+                    <div class="col-10 col-md-6  my-auto d-flex flex-wrap justify-content-center text-center "
                         id="pic_upload_0">
 
                         <div class="w-100 text-center my-auto ">
@@ -120,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row nextsteprow">
                     <div class="col-12 nextstep  d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
                         <button class="btn btn-dark ms-auto"><a href="#"
