--- a/Ron/房東/房東_加入新房源/AddHouse08/AddHouse08_detail.html
+++ b/Ron/房東/房東_加入新房源/AddHouse08/AddHouse08_detail.html
@@ -96,6 +96,14 @@
             border-radius: 10px;
             resize: none;
         }
+
+        .nextsteprow {
+            height: 100px;
+        }
+
+        .OptionsRow8 {
+            height: calc(100vh - 100px);
+        }
     </style>
 </head>
 
@@ -107,15 +115,15 @@
                 <h3>來為房源取名吧</h3>
             </div>
             <!-- 照片 -->
-            <div class="col-md-6 col-12 Options pt-md-5  ">
-                <div class="row justify-content-center pt-md-5 OptionsRow8 ">
-                    <div class="col-10 col-md-8 my-auto pt-md-5">
-                        <h3 class="fw-bolder mb-4">撰寫房源描述</h3>
+            <div class="col-md-6 col-12 Options   ">
+                <div class="row justify-content-center  OptionsRow8 ">
+                    <div class="col-10 col-md-8 my-auto ">
+                        <h3 class="fw-bolder ">撰寫房源描述</h3>
                         <textarea class="w-100" name="" id="" cols="10" rows="5" maxlength="500"
                             required>在這座寧靜的綠洲放鬆身心，好好度個假。</textarea>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row nextsteprow">
                     <div class="col-12 nextstep  d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
                         <button class="btn btn-dark ms-auto"><a href="#"
