幹我不修了ADDhouse

--- a/Ron/房東/房東_加入新房源/AddHouse01/AddHouse01.html
+++ b/Ron/房東/房東_加入新房源/AddHouse01/AddHouse01.html
@@ -30,7 +30,8 @@
         @media screen and (min-width:768px) {
             .Question {
                 background-image: linear-gradient(#CC277D, #441CA2);
-                height: 100vh;
+                height: calc(100vh + 100px);
+                min-height: 700px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -49,13 +50,13 @@
 
 
         }
-/* 
+
         @media screen and (max-width:767px) {
             .Options>.OptionsRow1 {
-                height: calc(100% + 300px);
+                height: 600px;
 
             }
-        } */
+        }
 
         /* .Options{
             height: 100vh;
@@ -91,7 +92,7 @@
             height: 100px;
         }
         .OptionsRow1{
-            height: calc(100vh - 100px);
+            height: 100vh;
         }
     </style>
 </head>
