--- a/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
+++ b/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
@@ -32,7 +32,8 @@
         @media screen and (min-width:768px) {
             .Question {
                 background-image: linear-gradient(#CC277D, #441CA2);
-                height: 100vh;
+                height: calc(100vh + 100px);
+                min-height: 700px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -120,7 +121,7 @@
         }
 
         .OptionsRow4 {
-            height: calc(100vh - 100px);
+            height: 100vh;
         }
     </style>
 </head>
