--- a/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
+++ b/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
@@ -35,7 +35,8 @@
         @media screen and (min-width:768px) {
             .Question {
                 background-image: linear-gradient(#CC277D, #441CA2);
-                height: 100vh;
+                height: calc(100vh + 100px);
+                min-height: 700px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -97,7 +98,7 @@
         }
 
         .OptionsRow5 {
-            height: calc(100vh - 100px);
+            height: 100vh ;
         }
     </style>
 </head>
