--- a/Ron/房東/房東_加入新房源/AddHouse09/AddHouse09_Price.html
+++ b/Ron/房東/房東_加入新房源/AddHouse09/AddHouse09_Price.html
@@ -34,7 +34,8 @@
         @media screen and (min-width:768px) {
             .Question {
                 background-image: linear-gradient(#CC277D, #441CA2);
-                height: 100vh;
+                height: calc(100vh + 100px);
+                min-height: 700px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -110,7 +111,7 @@
         }
 
         .OptionsRow9 {
-            height: calc(100vh - 100px);
+            height:100vh;
         }
     </style>
 </head>
