--- a/Elijah/確認訂購/booking.html
+++ b/Elijah/確認訂購/booking.html
@@ -91,8 +91,13 @@
                 </div>
                 <div class="border-bottom my-3">
                     <h3>付款方式</h3>
-                    <div>
-                        <p>綠界</p>
+                    <div class="input-group mb-3">
+                        <select name="payment" id="payment" class="form-select">
+                            <option selected>請選擇付款方式</option>
+                            <option value="creditCard">信用卡</option>
+                            <option value="creditCard">Google Pay</option>
+                            <option value="creditCard">Line Pay</option>
+                        </select>
                     </div>
                     <div class="mb-3">
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
