--- a/Sean/會員/登入註冊/個人資料/08.html
+++ b/Sean/會員/登入註冊/個人資料/08.html
@@ -38,8 +38,8 @@
             color: black;
         }
         
-        ul{
-            list-style: circle;
+        .ull{
+            list-style: disc;
         }
         
     </style>
@@ -99,11 +99,11 @@
                         <div class="form-check form-switch">
                             <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
                         </div>
-                        <ul class="ull">
-                            <li>本人須以附件形式傳送當地法律要求的文件</li>
-                            <li>本人須以附件形式傳送租賃協議</li>
-                            <li>本人須以附件形式傳送入住指南</li>
-                            <li>本人使用與 Airbnb 相連的軟體，該軟體未整合 Airbnb 的訊息功能</li>
+                        <ul>
+                            <li class="ull">本人須以附件形式傳送當地法律要求的文件</li>
+                            <li class="ull">本人須以附件形式傳送租賃協議</li>
+                            <li class="ull">本人須以附件形式傳送入住指南</li>
+                            <li class="ull">本人使用與 Airbnb 相連的軟體，該軟體未整合 Airbnb 的訊息功能</li>
                         </ul>
                         <p>本人理解，本人使用電子郵件別名受 Airbnb <a href="" class="fw-bold">《站外政策》</a>的約束。</p>
                     </div>
