--- a/Sean/會員/登入註冊/個人資料/09.html
+++ b/Sean/會員/登入註冊/個人資料/09.html
@@ -61,6 +61,10 @@
             text-decoration: none;
             color: black;
         }
+
+        .centerll :hover{
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -119,7 +123,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <h2 class="fw-bold">常見問題</h2>
-                <p>歡迎前往<a href="" class="fw-bold">說明中心</a>查看常見問答，並瀏覽該計畫的其他詳情。</p>
+                <p>歡迎前往<a href="" class="fw-bold centerll">說明中心</a>查看常見問答，並瀏覽該計畫的其他詳情。</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="accordion" id="accordionExample">
