--- a/Alvin/homepage/index.html
+++ b/Alvin/homepage/index.html
@@ -18,7 +18,7 @@
                 <img src="./creatures of corner.png" alt="Creatures of Corner" class="logo">
             </a> 
 
-            <button type="button" class="btn btn-outline-primary rounded-pill search-bar" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-outline-primary rounded-pill search-bar" data-bs-toggle="modal" data-bs-target="#searchModal">
                 你想去哪裡?
             </button>
 
@@ -35,11 +35,11 @@
         </div>
     </nav>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="searchModalLabel">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -71,7 +71,15 @@
                                             </span>
                                         </div>
                                     </div>
-                                    <div><input type="number" placeholder="人數" class="form-control mt-3"></div>
+                                    
+                                    <div class="d-flex justify-content-evenly align-items-center my-2">
+                                        <span>人數</span>
+                                        <div class="d-flex justify-content-center">
+                                            <button class="btn"><i class="fas fa-minus-circle fs-4"></i></button>
+                                            <input type="text" class="form-control w-25">
+                                            <button class="btn"><i class="fas fa-plus-circle fs-4"></i></button>
+                                        </div>
+                                    </div>
                                     <button class="btn btn-outline-success rounded-pill my-3" type="submit">搜尋</button>
                                 </form>
                             </section>
@@ -80,10 +88,6 @@
                         
                     </form>
                 </div>
-                <!-- <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div> -->
             </div>
         </div>
     </div>
@@ -234,8 +238,12 @@
 
     <script>
         $(function(){
-            $('#datepicker-start').datepicker();
-            $('#datepicker-end').datepicker();
+            $('#datepicker-start').datepicker({
+                autoclose: true
+            });
+            $('#datepicker-end').datepicker({
+                autoclose: true
+            });
         });
     </script>
 </body>
