--- a/Elaine/房東/HostList.html
+++ b/Elaine/房東/HostList.html
@@ -21,8 +21,56 @@
           <button class="btn btn_create_house"><i class="fas fa-plus"></i>建立房源</button>
       </section>
 
-      <section class="container-fluid">
+      <section class="container-fluid d-flex hostList_filter_container">
+          <!-- 搜尋房源 -->
+        <div class="searchBar">
+            <input id="hostList_searchBar" type="text" name="hostList_searchBar" placeholder="搜尋房源" value="" />
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+            </svg>
+            <button id="button_hostList_searchBar" type="submit" name="button_hostList_searchBar">
+            </button>
+        </div>
+        <!-- 房間與床鋪 -->
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink_room" data-bs-toggle="dropdown" aria-expanded="false">
+              房間與床鋪
+            </a>
 
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink_room">
+              <li><a class="dropdown-item" href="#"></a></li>
+
+            </ul>
+        </div>
+        <!-- 設備與服務 -->
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              設備與服務
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+
+            </ul>
+        </div>
+        <!-- 房源狀態 -->
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              房源狀態
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+
+            </ul>
+        </div>
+        <!-- 更多篩選條件 -->
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              更多篩選條件
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+
+            </ul>
+        </div>
       </section>
 
       <section class="container-fluid">
@@ -54,7 +102,7 @@
                 </td>
                 <td>
                     <div class="d-flex  host_list_house_img">
-                        <img src="/HostHomePage_Image/accessories1.jpg" alt="">
+                        <img src="./HostHomePage_Image/accessories1.jpg" alt="">
                         <p class="host_list_house_name">One4Night</p>
                     </div>
                 </td>
