--- a/Sean/會員/登入註冊/個人資料/09.html
+++ b/Sean/會員/登入註冊/個人資料/09.html
@@ -22,7 +22,7 @@
         }
 
         .textbox2 {
-            margin-left: 40px;
+            /* margin-left: 40px; */
             font-size: 20px;
         }
 
@@ -53,17 +53,16 @@
             margin-bottom: 100px;
         }
 
-        a {
-            text-decoration: underline;
+        .explaination-center{
+            color: rgb(113,113,113);
+            border-bottom: 1.5px solid rgb(113,113,113);
         }
-
-        a:hover {
-            text-decoration: none;
-            color: black;
-        }
-
-        .centerll :hover{
-            text-decoration: none;
+        .explaination-center:hover{
+            color: rgb(113,113,113);
+            border-bottom: 1.5px solid rgb(113,113,113);
+        } 
+        .welcome{
+            color: rgb(113,113,113);
         }
     </style>
 </head>
@@ -101,8 +100,8 @@
 
             </div>
             <div class="col-12 col-md-6 mt-5">
-                <div class="shadow p-3 mb-5 bg-white rounded h-100 d-flex flex-column justify-content-between">
-                    <div class="textbox2 mt-5">
+                <div class="shadow mb-5 bg-white rounded h-100 d-flex flex-column justify-content-between">
+                    <div class="textbox2 mt-5 mx-auto w-75">
                         <h3 class="fw-bold">查看受邀好友註冊狀態</h3>
                         <p class="mt-3">已完成註冊的受邀好友</p>
                         <p class="">註冊</p>
@@ -123,7 +122,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <h2 class="fw-bold">常見問題</h2>
-                <p>歡迎前往<a href="" class="fw-bold centerll">說明中心</a>查看常見問答，並瀏覽該計畫的其他詳情。</p>
+                <p class="welcome fs-6">歡迎前往<a href="" class="fw-bold explaination-center">說明中心</a>查看常見問答，並瀏覽該計畫的其他詳情。</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="accordion" id="accordionExample">
