--- a/Sean/會員/登入註冊/帳號9宮格/9.html
+++ b/Sean/會員/登入註冊/帳號9宮格/9.html
@@ -14,7 +14,8 @@
     <style>
         .section1{
             margin-top: 100px;
-            padding-left: 150px;
+            flex-wrap: wrap;
+            justify-content: flex-start;
         }
         
         .rounded {
@@ -27,6 +28,17 @@
             justify-content: center;
             align-items: center;
             margin-top: 50px;
+        }
+
+        .info-center{
+            text-decoration: underline;
+            font-weight: bold;
+        }
+        .info-center:hover{
+            text-decoration: underline;
+            font-weight: bold;
+            color: black;
+            border-bottom: none;
         }
 
         
@@ -56,10 +68,10 @@
         </div>
     </nav>
 
-    <div class="section1">
-        <h2 class="fw-bold">帳號</h2>
-        <p>Rosario Kao,kirirayray@gmail.com ·<u href="" class="fw-bold">前往個人資料</u></p>
-    </div>
+    <section class="container section1">
+        <h2 class="row row-cols-1 fw-bold">帳號</h2>
+        <p>Rosario Kao,kirirayray@gmail.com ·<a href="" class="info-center">前往個人資料</a></p>
+    </section>
 
     <section class="container-lg mt-5 provide-service">
         <div class="row row-cols-1 row-cols-md-3 ">
@@ -157,10 +169,12 @@
         </div>
     </section>
 
-    <section>
-        <div class="section2">
-            <p class="">想要停用您的帳號嗎?</p>
-            <p class="fw-bold text-decoration-underline">立即處理</p>
+    <section class="container section2  text-center">
+        <div class="row">
+            <div class="col-12">
+                <p class="">想要停用您的帳號嗎?</p>
+                <a href="" class="info-center">立即處理</a>
+            </div>
         </div>
     </section>
 
