--- a/Sean/會員/登入註冊/個人資料/02.html
+++ b/Sean/會員/登入註冊/個人資料/02.html
@@ -70,6 +70,10 @@
         .linkline {
             color: rgb(3, 94, 100);
         }
+        .linkline:hover {
+            text-decoration: underline;
+            border-bottom: none;
+        }
     </style>
 </head>
 
